15920
```scala
scala> class C
defined class C

scala> def foo(c: C) = 0
foo: (c: C)Int

scala> foo(new C { override def bar = 1 })
<console>:8: error: illegal combination of modifiers: private and override for: method bar
       foo(new C { override def bar = 1 })
                                ^
```

=== What is the expected behavior? ===

an error message saying `method bar overrides nothing`.
